packages/styles/button.css
:root {
  --button-background-color-primary: var(--accent-primary);
  --button-background-color-primary-disabled: #79a7d9;
  --button-outline-color-primary: var(--button-background-color-primary);
  --button-background-color-primary-active: var(--accent-primary-active);

  --button-background-color-secondary: var(--gray-20);
  --button-background-color-secondary-disabled: var(--gray-20);
  --button-outline-color-secondary: var(--gray-90);
  --button-background-color-secondary-active: var(--gray-30);
  --button-border-color-secondary: var(--gray-40);

  --button-background-color-badge-active: var(--gray-20);

  --button-background-color-danger: var(--error);
  --button-background-color-danger-disabled: #db6379;
  --button-background-color-danger-active: var(--accent-error-active);
  --button-outline-color-danger: var(--error);

  --button-background-color-error: var(--error);
  --button-background-color-error-disabled: #db6379;
  --button-background-color-error-active: var(--accent-error-active);
  --button-outline-color-error: var(--error);

  --button-text-size: var(--text-size-body);
  --button-thin-text-size: var(--text-size-body-small);
  --button-text-color-dark: var(--gray-90);
  --button-text-color-light: #fff;
  --button-text-color-disabled: var(--disabled);
  --button-focus-ring-color: var(--focus-light);
  --button-thin-height: var(--target-size-minimum);

  --button-height: 2.25rem;
}

.Button--primary,
.Button--secondary,
.Button--tertiary,
.Button--clear,
.Button--error,
.Button--danger,
.Button--danger-secondary {
  border-radius: 3px;
  border: 1px solid transparent;
  font-size: var(--button-text-size);
  box-sizing: border-box;
  padding: 0 var(--space-small);
  position: relative;
  text-align: center;
  min-height: var(--button-height);
  min-width: 6.25rem;
  display: inline-grid;
  grid-auto-flow: column;
  align-items: center;
  justify-items: center;
  justify-content: center;
  gap: var(--space-smallest);
}

.Button--tag,
.Button--badge {
  position: relative;
}

.Button--badge {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 0 var(--space-small) 0 var(--space-smaller);
  background-color: var(--badge-background-color);
  color: var(--badge-text-color);
  border: 1px solid var(--badge-border-color);
  border-radius: var(--badge-height);
  font-size: var(--text-size-body);
  font-weight: var(--font-weight-normal);
  min-height: var(--badge-height);
}

.Button--badge:not([disabled], [aria-disabled='true']):active {
  background-color: var(--button-background-color-badge-active);
}

button.Link {
  cursor: pointer;
  font-size: inherit;
  font-weight: var(--font-weight-normal);
}

:is(
  .Button--primary,
  .Button--secondary,
  .Button--tertiary,
  .Button--error,
  .Button--danger,
  .Button--danger-secondary
):focus {
  outline: none;
}

:is(
  .Button--primary,
  .Button--secondary,
  .Button--tertiary,
  .Button--error,
  .Button--danger,
  .Button--danger-secondary,
  .Button--tag,
  .Button--badge
):before {
  content: '';
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 3px;
  pointer-events: none;
}

:is(.Button--tag, .Button--badge):before {
  border-radius: var(--button-height);
}

.Button--primary:not([disabled]):not([aria-disabled='true']):hover:before {
  box-shadow: 0 0 0 1px var(--button-outline-color-primary);
}

:is(.Button--secondary, .Button--tertiary):not([disabled]):not(
    [aria-disabled='true']
  ):hover:before {
  box-shadow: 0 0 0 1px var(--button-outline-color-secondary);
}

:is(.Button--error, .Button--danger, .Button--danger-secondary):not(
    [disabled]
  ):not([aria-disabled='true']):hover:before {
  box-shadow: 0 0 0 1px var(--button-outline-color-error);
}

:is(.Button--tag, .Button--badge):not([disabled]):not(
    [aria-disabled='true']
  ):hover:before {
  box-shadow: 0 0 0 1px var(--button-outline-color-secondary);
}

:is(
    .Button--primary,
    .Button--secondary,
    .Button--tertiary,
    .Button--error,
    .Button--danger,
    .Button--danger-secondary
  ):focus:before {
  box-shadow: 0 0 1px 2px var(--button-focus-ring-color, --focus);
}

.Button--primary {
  background-color: var(--button-background-color-primary);
  color: var(--button-text-color-light);
}

.Button--primary[aria-disabled='true'],
.Button--primary[disabled] {
  background-color: var(--button-background-color-primary-disabled);
}

.Button--primary:not([disabled]):not([aria-disabled='true']):active {
  background: var(--button-background-color-primary-active);
}

.Button--secondary,
.Button--tertiary {
  background-color: var(--button-background-color-secondary);
  color: var(--button-text-color-dark);
  border: 1px solid var(--button-border-color-secondary);
}

.Button--tertiary:is(:not(:hover, :focus), [disabled], [aria-disabled='true']) {
  border-color: transparent;
  background-color: transparent;
}

.Button--secondary:is([aria-disabled='true'], [disabled]) {
  color: var(--button-text-color-disabled);
  background-color: var(--button-background-color-secondary-disabled);
}

.Button--tertiary:is([aria-disabled='true'], [disabled]) {
  color: var(--button-text-color-disabled);
}

:is(.Button--secondary, .Button--tertiary):not(
    [disabled],
    [aria-disabled='true']
  ):active {
  background-color: var(--button-background-color-secondary-active);
}

.Button--error,
.Button--danger,
.Button--danger-secondary:active {
  background-color: var(--button-background-color-danger);
  box-shadow: none;
  color: var(--button-text-color-light);
  --button-hover-outline-color: var(--button-outline-color-error);
}

.Button--danger-secondary {
  background-color: transparent;
  color: var(--button-background-color-danger);
  border: 1px solid var(--button-background-color-danger);
  --button-hover-outline-color: var(--button-outline-color-error);
}

.Button--error[aria-disabled='true'],
.Button--error[disabled] {
  color: var(--button-text-color-light);
  background-color: var(--button-background-color-error-disabled);
}

.Button--error:not([disabled]):not([aria-disabled='true']):active {
  background-color: var(--button-background-color-error-active);
}

.Button--tag:is([disabled], [aria-disabled='true']),
.Button--badge:is([disabled], [aria-disabled='true']) {
  color: var(--disabled);
}

:is(
    .Button--primary,
    .Button--secondary,
    .Button--tertiary,
    .Button--error,
    .Button--danger,
    .Button--danger-secondary
  )
  .Icon {
  margin: 0 -4px;
}

.Button--thin .Icon svg {
  width: calc(var(--button-thin-height) - 8px);
  height: calc(var(--button-thin-height) - 8px);
}

/* Usage of .DefinitionButton is deprecated and no longer supported */
.DefinitionButton {
  display: inline;
  vertical-align: baseline;
  position: relative;
}

/* Usage of .DefinitionButton is deprecated and no longer supported */
.DefinitionButton button {
  background-color: transparent;
  color: var(--text-color-base);
  font-weight: var(--font-weight-medium);
  border-bottom: 1px dotted;
  display: inline-block;
  margin: 0 2px;
  padding: 0;
  font-size: inherit;
  vertical-align: baseline;
  cursor: auto;
  user-select: text;
}

.Button--thin {
  min-height: var(--button-thin-height);
  min-width: 6.25rem;
  font-size: var(--button-thin-text-size);
  padding: 0 var(--space-small);
}

.Button--condensed {
  min-width: var(--button-height);
  padding: 0;
}

.Button--condensed:is(.Button--thin) {
  min-width: var(--button-thin-height);
}

[class*='Button--'] + [class*='Button--'] {
  margin-left: var(--space-smallest);
}

/* Dark Theme */

.cauldron--theme-dark {
  --button-background-color-primary: var(--accent-medium);
  --button-background-color-primary-disabled: var(--accent-medium);
  --button-background-color-secondary: var(--accent-medium);
  --button-background-color-secondary-disabled: var(--accent-medium);
  --button-background-color-error-disabled: var(--accent-medium);

  --button-background-color-primary-active: #a7e9f7;
  --button-background-color-secondary-active: var(--accent-light);
  --button-background-color-error-active: #fea7a6;

  --button-background-color-danger: var(--accent-danger);

  --button-background-color-badge-active: var(--badge-background-color);

  --button-focus-ring-color: var(--focus-dark);
  --field-label-text-color: var(--accent-light);
  --field-border-color-error: var(--accent-danger);
  --error: var(--accent-danger);
}

.cauldron--theme-dark .Button--primary {
  border: 2px solid var(--accent-info);
}

.cauldron--theme-dark .Button--secondary {
  color: var(--accent-light);
  border: 2px solid var(--accent-light);
}

.cauldron--theme-dark .Button--tertiary {
  color: var(--accent-light);
}

.cauldron--theme-dark .Button--danger {
  color: var(--button-background-color-secondary);
  --button-outline-color-secondary: var(--button-background-color-danger);
}

.cauldron--theme-dark .Button--danger-secondary {
  border-width: 2px;
  color: var(--accent-light);
  background-color: var(--button-background-color-secondary);
}

.cauldron--theme-dark .Button--danger-secondary:active {
  color: var(--accent-light);
  background-color: var(--button-background-color-secondary);
}

.cauldron--theme-dark .Button--tertiary:is(:hover, :active, :focus) {
  border: 2px solid var(--accent-light);
}

.cauldron--theme-dark .Button--tertiary:not(:hover, :focus) {
  color: #fff;
}

.cauldron--theme-dark .Button--error {
  background-color: var(--accent-medium);
  color: #fff;
  border: 2px solid var(--accent-danger);
}

.cauldron--theme-dark
  :is(
    .Button--primary,
    .Button--secondary,
    .Button--error,
    .Button--danger,
    .Button--danger-secondary,
    .Button--tag,
    .Button--badge
  ):is([disabled], [aria-disabled='true']) {
  color: var(--dark-workspace-color);
}

.cauldron--theme-dark
  .Button--primary:not([disabled]):not([aria-disabled='true']):active,
.cauldron--theme-dark
  .Button--secondary:not([disabled]):not([aria-disabled='true']):active,
.cauldron--theme-dark
  .Button--tertiary:not([disabled]):not([aria-disabled='true']):active {
  color: var(--accent-medium);
}

.cauldron--theme-dark
  :is(.Button--error, .Button--danger, .Button--danger-secondary):not(
    [disabled]
  ):not([aria-disabled='true']):active {
  background-color: #fea7a6;
  color: var(--accent-medium);
}

.cauldron--theme-dark button.Link {
  color: var(--accent-light);
}

.cauldron--theme-dark button.Link:hover {
  color: #fff;
}

.cauldron--theme-dark
  .Button--primary:not([disabled]):not([aria-disabled='true']):hover:before {
  box-shadow:
    0 0 0 1px var(--dark-workspace-color),
    0 0 0 2px var(--accent-info);
}

.cauldron--theme-dark
  .Button--secondary:not([disabled]):not([aria-disabled='true']):hover:before,
.cauldron--theme-dark
  .Button--tertiary:not([disabled]):not([aria-disabled='true']):hover:before {
  box-shadow:
    0 0 0 1px var(--dark-workspace-color),
    0 0 0 2px var(--accent-light);
}

.cauldron--theme-dark
  .Button--error:not([disabled]):not([aria-disabled='true']):hover:before {
  box-shadow:
    0 0 0 1px var(--dark-workspace-color),
    0 0 0 2px var(--accent-danger);
}

.cauldron--theme-dark
  .Button--danger-secondary:not([disabled]):not(
    [aria-disabled='true']
  ):hover:before {
  box-shadow:
    0 0 0 1px var(--dark-workspace-color),
    0 0 0 2px var(--accent-danger);
}

.cauldron--theme-dark
  .Button--tag:not([disabled]):not([aria-disabled='true']):hover:before,
.cauldron--theme-dark
  .Button--badge:not([disabled]):not([aria-disabled='true']):hover:before {
  box-shadow:
    0 0 0 1px var(--dark-workspace-color),
    0 0 0 2px var(--accent-info);
}

.cauldron--theme-dark .Button--tertiary:is([disabled], [aria-disabled='true']) {
  color: #74818b;
}

